# vpn-password-manager-

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  SECURITY.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: check-apple-cert.yml  ci.yml  ios-testflight.yml  release.yml  vpn-live-test.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/e2e/: screenshots.spec.ts
apps/desktop/scripts/: stage-extension.mjs
apps/desktop/src/: App.tsx  main.tsx  placeholder.ts  updater.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: applock.rs  applog.rs  commands.rs  hello.rs  main.rs  net.rs  nmhost.rs  servers.rs  state.rs  sync.rs  vpn.rs
apps/desktop/src/bridge/: index.ts  tauri.ts
apps/desktop/src/bridge/mock/: index.ts  seed.ts  vpnSim.ts
apps/desktop/src/components/: ClipboardCountdown.tsx  ErrorBoundary.tsx  Layout.tsx  Toast.tsx  kit.tsx  ui.tsx
apps/desktop/src/components/charts/: ThroughputChart.tsx  TimeSeriesChart.tsx
apps/desktop/src/components/globe/: Globe.tsx
apps/desktop/src/components/palette/: CommandPalette.tsx
apps/desktop/src/screens/: Devices.tsx  Experimental.tsx  GettingStarted.tsx  Health.tsx  ItemEditor.tsx  Onboarding.tsx  Report.tsx  Servers.tsx  Settings.tsx  SetupWizard.tsx  Tools.tsx  Transfers.tsx  Unlock.tsx  Vault.tsx  Vpn.tsx
apps/desktop/src/stores/: app.ts
apps/desktop/src/styles/: globals.css
apps/extension/: manifest.json  package.json  popup.html  tsconfig.json  vite.config.ts
apps/extension/host/: com.sentinel.host.json.tmpl
apps/extension/src/: background.ts  content.ts  inpage.ts  matching.test.ts  matching.ts  placeholder.ts  protocol.ts
apps/extension/src/popup/: popup.ts
apps/ios-key/: .gitignore  PROJECT.md  README.md  project.yml
apps/ios-key/Config/: Info.plist  NorthKey.entitlements
apps/ios-key/NorthKey/: Bridging.h  ContentView.swift  NorthKeyApp.swift
apps/ios-key/NorthKey/Api/: ApiClient.swift
apps/ios-key/NorthKey/Approvals/: PushHandler.swift  UnlockApprovalView.swift
apps/ios-key/NorthKey/Crypto/: Channel.swift  EnclaveKey.swift  VaultCrypto.swift
apps/ios-key/NorthKey/Onboarding/: ScanSetupView.swift  ServerSetupView.swift
apps/ios-key/NorthKey/Pairing/: PairingCeremony.swift  QRScanner.swift
apps/ios-key/NorthKey/Servers/: MonitoringClients.swift  ServerDetailView.swift  ServersView.swift
apps/ios-key/NorthKey/Totp/: TotpViewer.swift
apps/ios-key/NorthKey/Transfers/: TransfersView.swift
apps/ios-key/NorthKey/Vault/: VaultModels.swift  VaultStore.swift  VaultViews.swift
apps/ios-key/NorthKeyTests/: NetdataMathTests.swift  VaultCryptoTests.swift
apps/ios-key/NorthKeyTests/Fixtures/: golden-vault.json
apps/ios-key/SentinelKey/: ContentView.swift  SentinelKeyApp.swift
apps/ios-key/SentinelKey/Approvals/: PushHandler.swift  UnlockApprovalView.swift
apps/ios-key/SentinelKey/Crypto/: EnclaveKey.swift
apps/ios-key/SentinelKey/Pairing/: PairingCeremony.swift
apps/ios-key/SentinelKey/Totp/: Rfc6238.swift
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  seed.rs  totp.rs
crates/core/src/auth/: google.rs  mod.rs
crates/core/src/cloud/: hetzner.rs  latency.rs  linode.rs  manager.rs  mock.rs  mod.rs  netdata.rs  provider.rs  watchdog.rs
crates/core/src/crypto/: kdf.rs  mod.rs  types.rs
crates/core/src/generator/: mod.rs  passphrase.rs  strength.rs
crates/core/src/health/: audit.rs  hibp.rs  mod.rs
crates/core/src/import/: bitwarden.rs  chrome.rs  csv.rs  export.rs  mod.rs
crates/core/src/keyring/: mock.rs  mod.rs  password.rs  phone.rs  recovery.rs
crates/core/src/nm/: framing.rs  mod.rs  protocol.rs
crates/core/src/pairing/: channel.rs  mod.rs
crates/core/src/platform/: killswitch.rs  mod.rs  netinfo.rs  secrets.rs
crates/core/src/provision/: callback.rs  cloudinit.rs  mod.rs
crates/core/src/recovery_kit/: mod.rs  pdf.rs
crates/core/src/vault/: document.rs  envelope.rs  fileblob.rs  mod.rs  model.rs  passkey.rs  session.rs  store.rs  webauthn.rs
crates/core/src/vpn/: cost.rs  history.rs  metrics.rs  mod.rs  profiles.rs  session.rs  speedtest.rs  sweep.rs
crates/core/src/wg/: config.rs  controller.rs  keys.rs  mod.rs
crates/core/tests/: ios_golden_vectors.rs  security_gate.rs  structural_zero_knowledge.rs
crates/nm-host/: Cargo.toml
crates/nm-host/src/: main.rs
docs/: architecture.md  browser-autofill.md  chrome-web-store.md  crypto-spec.md  ios-testflight.md  macos-signing.md  morning-test.md  native-messaging.md  pairing-ceremony.md  privacy-policy.md  real-vpn.md  releasing.md  security-review-2026-07.md  self-hosting.md  setup.md  store-listing.md  vpn-testing.md
scripts/: interop-check.sh  migrations-check.sh  plaintext-audit.sh  version-check.sh
services/api/: Cargo.toml  Dockerfile
services/api/migrations/: .checksums  0001_accounts.sql  0002_devices.sql  0003_wrapped_keys.sql  0004_vaults.sql  0005_refresh_tokens.sql  0006_unlock_requests.sql  0007_schema_guard.sql  0008_security_events.sql  0009_file_transfers.sql  0010_wrapped_keys_password.sql  0011_account_unification.sql  0012_enroll_codes.sql  0013_password_auth.sql  0014_transfer_retention.sql
services/api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  ratelimit.rs  routes.rs  security.rs  state.rs
services/api/tests/: account_unification.rs  integration.rs
showcase/: README.md
