[package]
name = "sentinel-nm-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Chrome native-messaging host bridging the extension to the desktop app."

[[bin]]
name = "sentinel-nm-host"
path = "src/main.rs"

[dependencies]
sentinel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
