[package]
name = "sentinel-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SENTINEL sync backend: Axum + Postgres, zero-knowledge schema."

[[bin]]
name = "sentinel-api"
path = "src/main.rs"

[dependencies]
sentinel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
