[package]
name = "sentinel-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SENTINEL desktop shell (Tauri glue over sentinel-core)."

# NOTE: excluded from workspace default-members (see root Cargo.toml). The Tauri
# dependency and its webkit2gtk/gtk system requirements are only pulled when this
# crate is built explicitly (`cargo build -p sentinel-desktop` / `tauri build`).

[[bin]]
name = "sentinel-desktop"
path = "src/main.rs"

[dependencies]
sentinel-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
