[package]
name = "sentinel-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SENTINEL desktop shell (Tauri glue over sentinel-core)."

# NOTE: excluded from workspace default-members (see root Cargo.toml). Tauri and its
# webkit2gtk/gtk system requirements are only pulled when this crate is built
# explicitly (`cargo build -p sentinel-desktop` / `tauri build`), never by `cargo test`.

[[bin]]
name = "sentinel-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# live-linode compiles the real Linode CloudProvider alongside the default mocks (opt-in
# real VPN); live-hibp enables the real Have-I-Been-Pwned breach check for the health audit.
sentinel-core = { workspace = true, features = ["live-linode", "live-hibp", "live-hetzner"] }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
# The pubkey-callback fetcher (talks to the freshly-booted exit node).
reqwest = { workspace = true }
tauri = { version = "2", features = [] }
# Self-update: the updater plugin fetches/verifies/installs signed releases; the
# process plugin relaunches the app after an update is applied.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Server-watchdog alerts surface as native OS notifications (Windows toasts).
tauri-plugin-notification = "2"
# Local persistence: the vault key lives only in the OS keychain (Windows Credential
# Manager / macOS Keychain / Secret Service), never next to the on-disk vault. The
# vault ciphertext itself is the SQLite file opened by sentinel-core's LocalVault.
keyring = { version = "3", default-features = false, features = ["windows-native", "apple-native", "sync-secret-service"] }
base64 = "0.22"
uuid = "1"
# Random salt for the optional master-password KEK.
rand = { workspace = true }
# Render the authenticator-app enrollment secret as a scannable QR (SVG only — no image deps).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Generate the self-signed TLS cert for a deployed sync server (ring backend — already in the
# graph via rustls; avoids aws-lc-rs, which is painful to cross-compile to windows-gnu).
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# Resolve <app_data_dir> in native-messaging host mode without a Tauri handle
# (dirs::data_dir().join("com.sentinel.desktop") mirrors Tauri's app_data_dir()).
# Pinned to the version already resolved in the workspace lockfile.
dirs = "6"

# Windows native-messaging host registration lives in HKCU (Chrome + Edge);
# UserConsentVerifier drives the Windows Hello unlock prompt.
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = ["Security_Credentials_UI", "Foundation"] }

[features]
# Enabled by `tauri build` / the Tauri CLI.
custom-protocol = ["tauri/custom-protocol"]
